# llm-red-team-toolkit

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_MANIFEST.txt  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: settings.json
redteam/: __init__.py  cli.py
redteam/attacks/: __init__.py  base.py  data_exfil.py  jailbreak.py  prompt_injection.py  tool_abuse.py
redteam/core/: __init__.py  engine.py  report.py  target.py
redteam/payloads/: __init__.py  library.py
redteam/utils/: helpers.py
scenarios/: example_scan.yaml
tests/: __init__.py  test_attacks.py  test_cli.py  test_engine.py  test_helpers.py  test_payloads.py  test_report.py  test_target.py  test_tool_abuse.py
